--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "docs/_build/html"]
 	path = docs/_build/html
-	url = https://github.com/sasaki77/zabbix-epics-py.git
+	url = http://github.com/sasaki77/zabbix-epics-py
 	branch = gh-pages
